--- a/package.json
+++ b/package.json
@@ -8,8 +8,5 @@
     "start": "node src/server.js"
   },
   "author": "Emmanuel Tosin Adebisi",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.18.1"
-  }
+  "license": "ISC"
 }
